--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fullcalendar/daygrid": "^6.1.11",
     "@fullcalendar/interaction": "^6.1.11",
     "@fullcalendar/timegrid": "^6.1.11",
+    "angular-web-storage": "^17.0.0",
     "axios": "^1.6.7",
     "express": "^4.18.2",
     "preact": "^10.19.6",
